--- a/src/screen/Home/Exam Page/ExamPage.css
+++ b/src/screen/Home/Exam Page/ExamPage.css
@@ -137,7 +137,7 @@
         }  
   }
 .ExamPageCard{
-        width: 86%;
+        /* width: 86%; */
         margin-left: auto;
         margin-right: auto;
         
@@ -146,7 +146,7 @@
     position: sticky;
     top: 56px;
     background: white;
-    width: 28%;
+    width: 100%;
     height: 92.5vh;
     display: flex;
     justify-content: center;
